refactor image upload
